# jedi-ci

./: .gitignore  Dockerfile  Dockerfile.base  README.md  action.yml  pyproject.toml
.github/workflows/: push_container.yml  test.yml
cfn/: README.md  jedi-ci-action.yaml
ci_action/: __init__.py  implementation.py  main.py
operation_tools/: build_and_push.sh
shell/: bootstrap_test.sh  environment.sh  git_askPass_app_credentials.py  run_tests.sh  run_tests_integration.sh  run_tests_simple.sh  util.sh
shell/ctest_assets/: CTestConfig.cmake  CTestCustom.ctest.in  cdash-integration.cmake
shell/github_api/: check_run.py  generate_github_token.py
test/: jedi-bundle-cmake.txt  jedi-ci.yaml  test_cmake_rewrite.py  test_code_style.py  test_pr_github_client.py
