[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci_action"
version = "0.1.0"
description = "JEDI CI ci_action utilities"
authors = [
    { name = "JCSDA", email = "info@jcsda.org" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyGithub",
    "requests",
    "pyjwt",
    "cryptography",
    "PyGithub>=1.58",
    "boto3>=1.26"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["test"]

[project.scripts]
jedi_ci = "ci_action:main"