[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci_action"
version = "0.1.0"
description = "JEDI CI ci_action utilities"
authors = [
    { name = "JCSDA", email = "info@jcsda.org" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pyjwt",
    "cryptography",
    "PyGithub>=2.6",
    "boto3>=1.40",
    "pyyaml>=6"
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pycodestyle>=2.8.0",
    "flake8>=7.3.0",
    "Flake8-pyproject>=1.2.3"
]

[tool.setuptools]
packages = ["ci_action", "ci_action.library"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["test"]

[tool.flake8]
max-line-length = 100
count = true

[project.scripts]
jedi_ci = "ci_action:main"